Исправить работу uzvdialuxlumimporter_uiform
Добавлена возможность редактирования ячеек второго столбца в TLazVirtualStringTree.
Первый столбец остается доступным только для чтения.

Изменения:
- Добавлен toEditOnDblClick в TreeOptions.MiscOptions для поддержки редактирования
- Добавлен обработчик VSTMouseDown для явного запуска редактирования при клике на вторую колонку
- Обновлена LFM форма для подключения нового обработчика событий

Фикс основан на примере из unit1.pas/unit1.lfm, предоставленном в issue.

--- a/cad_source/zcad/velec/dialuximport/uzvdialuxlumimporter_uiform.lfm
+++ b/cad_source/zcad/velec/dialuximport/uzvdialuxlumimporter_uiform.lfm
@@ -38,6 +38,7 @@ object frmDialuxLumImporter: TfrmDialuxLumImporter
     OnEditing = vstLightMappingEditing
     OnFreeNode = vstLightMappingFreeNode
     OnGetText = vstLightMappingGetText
+    OnMouseDown = vstLightMappingMouseDown
     OnPaintText = vstLightMappingPaintText
     OnNewText = vstLightMappingNewText
   end
