--- a/cad_source/zcad/velec/dialuximport/uzvdialuxlumimporter_uiform.lfm
+++ b/cad_source/zcad/velec/dialuximport/uzvdialuxlumimporter_uiform.lfm
@@ -7,6 +7,7 @@ object frmDialuxLumImporter: TfrmDialuxLumImporter
   ClientHeight = 624
   ClientWidth = 764
   Position = poScreenCenter
+  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
   object lblRotation: TLabel
     Left = 8
